// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textArea > should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <label
        class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        for="«rs»"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="true"
          class="styles__hlf4vn3 styles_error_true__hlf4vn5"
          id="«rs»"
          rows="3"
          style="--hlf4vn0: calc(1.5rem + 0px + smallpx);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <svg
            class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_danger__vbm0wq5 styles_size_small__vbm0wqa styles_undefined_compound_36__vbm0wq1k"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh57"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <div>
          <p
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
          >
            success
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <label
        class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        for="«ro»"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3 styles_success_true__hlf4vn4"
          id="«ro»"
          rows="3"
          style="--hlf4vn0: calc(1.5rem + 0px + smallpx);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <svg
            class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_success__vbm0wq4 styles_size_small__vbm0wqa styles_undefined_compound_35__vbm0wq1j"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM11.8435 6.20859C12.0967 5.88082 12.0363 5.40981 11.7086 5.15654C11.3808 4.90327 10.9098 4.96365 10.6565 5.29141L6.95615 10.0801L5.30747 8.24828C5.03038 7.94039 4.55616 7.91543 4.24828 8.19253C3.94039 8.46962 3.91544 8.94384 4.19253 9.25172L6.44253 11.7517C6.59132 11.917 6.80582 12.0078 7.02809 11.9995C7.25036 11.9911 7.45746 11.8846 7.59346 11.7086L11.8435 6.20859Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh57"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <div>
          <p
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_success__m4c9owc style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_16__m4c9ow1s style_undefined_compound_72__m4c9ow3c"
          >
            success
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly when input is disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <label
        class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        for="«ra»"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3"
          disabled=""
          id="«ra»"
          rows="3"
          style="--hlf4vn0: calc(1.5rem + 0px + 0px);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <label
        class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        for="«rd»"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3"
          id="«rd»"
          readonly=""
          rows="3"
          style="--hlf4vn0: calc(1.5rem + 0px + 0px);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly when it is required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div
        class="styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <label
          class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          for="«rg»"
        >
          Test
        </label>
        <span
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
        >
          *
        </span>
      </div>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3"
          id="«rg»"
          rows="3"
          style="--hlf4vn0: calc(1.5rem + 0px + 0px);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly with basic props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <label
        class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        for="«r0»"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3"
          id="«r0»"
          rows="3"
          style="--hlf4vn0: calc(1.5rem + 0px + 0px);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly with maxlength 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <label
        class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        for="«rk»"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3"
          id="«rk»"
          maxlength="3"
          rows="3"
          style="--hlf4vn0: calc(1.5rem + 0px + 0px);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        />
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh57"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <div />
        <div
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
        >
          4/3
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render with AutoExpandMax 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <label
        class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        for="«r14»"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="true"
          class="styles__hlf4vn3 styles_error_true__hlf4vn5"
          id="«r14»"
          rows="3"
          style="--hlf4vn0: calc(1.5rem + 0px + smallpx);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <svg
            class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_danger__vbm0wq5 styles_size_small__vbm0wqa styles_undefined_compound_36__vbm0wq1k"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh57"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <div>
          <p
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
          >
            success
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render with AutoExpandMax and rows 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <label
        class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        for="«r18»"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="true"
          class="styles__hlf4vn3 styles_error_true__hlf4vn5"
          id="«r18»"
          rows="2"
          style="--hlf4vn0: calc(1.5rem + 0px + smallpx);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <svg
            class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_danger__vbm0wq5 styles_size_small__vbm0wqa styles_undefined_compound_36__vbm0wq1k"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh57"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <div>
          <p
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
          >
            success
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render with auto rows 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <label
        class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        for="«r10»"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="true"
          class="styles__hlf4vn3 styles_error_true__hlf4vn5"
          id="«r10»"
          rows="1"
          style="--hlf4vn0: calc(1.5rem + 0px + smallpx);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <svg
            class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_danger__vbm0wq5 styles_size_small__vbm0wqa styles_undefined_compound_36__vbm0wq1k"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh57"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <div>
          <p
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
          >
            success
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
